--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "puppeteer install",
+    "postinstall": "npx puppeteer browsers install chrome",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
     "dev": "node --watch backend/server.js"
   },
