--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+    "build": "npm install && npx puppeteer browsers install chrome && npm install --prefix frontend && npm run build --prefix frontend",
     "dev": "node --watch backend/server.js"
   },
   "author": "",
