--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.14.2",
     "node-cron": "^4.0.4",
     "nodemailer": "^7.0.3",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
