--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,11 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.3",
@@ -31,6 +31,7 @@
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
     "firebase": "^11.8.1",
@@ -46,6 +47,7 @@
     "react-day-picker": "^9.0.0-rc.6",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
