--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.509.0",
+    "media-chrome": "^4.13.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
     "motion": "^12.18.1",
@@ -47,6 +48,7 @@
     "react-day-picker": "^9.0.0-rc.6",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-medium-image-zoom": "^5.3.0",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.0",
     "recharts": "^2.15.3",
