--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,7 @@
-name: Deploy Backend to EC2
+name: Deploy Backend to AWS-EC2
 
 on:
   workflow_dispatch:   # Manual "Run workflow" button
-  # push:
-  #   branches:
-  #     - main        # uncomment if you also want auto-deploy on push
 
 jobs:
   deploy:
@@ -22,22 +19,25 @@ jobs:
 
       - name: SSH and deploy backend
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             echo "🚀 Starting backend deployment..."
-
-            cd ~/dushaynt/Task-App/backend || exit 1
-
+            
+            cd ~/dushyant/Task-App/backend/ || exit 1
+            
+            echo "♻️ Resetting any local changes..."
+            git reset --hard
+            
             echo "🔗 Git status:"
             git status
-
+            
             echo "⬇️ Pulling latest code..."
-            git pull origin main || exit 1
-
+            git pull origin main
+            
             echo "📦 Installing dependencies..."
             npm install --production
-
+            
             echo "🔄 Restarting backend with PM2..."
-            pm2 restart backend || pm2 start app.js --name backend
-
+            pm2 restart 0
+            
             echo "✅ Backend deployed successfully!"
           EOF
