--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy Backend to EC2
 
 on:
-  workflow_dispatch:   # Manual "Run workflow" button
+  workflow_dispatch: # Manual "Run workflow" button
 
 jobs:
   deploy:
@@ -19,9 +19,23 @@ jobs:
 
       - name: SSH and deploy backend
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
+          ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
             echo "[INFO] Starting backend deployment..."
+
+            # Go to project directory
+            cd /home/ubuntu/dushyant/Task-App/backend || exit 1
+
+            echo "[GIT] Pulling latest code..."
+            git pull origin main
+
+            echo "[NPM] Installing dependencies..."
+            npm install --production
+
             echo "[PM2] Restarting backend..."
             pm2 restart taskmate-backend || pm2 start server.js --name taskmate-backend
+
+            echo "[PM2] Current processes:"
+            pm2 list
+
             echo "[SUCCESS] Backend deployed successfully!"
           EOF
