--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,12 @@ jobs:
           npm install --production &&
           pm2 restart taskmate-backend || pm2 start server.js --name taskmate-backend
           "
+      - name: Deploy to EC2
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
+          cd ~/dushyant/Task-App/backend 
+          git pull origin main 
+          npm install --production 
+          pm2 restart taskmate-backend || pm2 start server.js --name taskmate-backend
+          EOF
+
