--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install && npx puppeteer browsers install chrome && npm install --prefix frontend && npm run build --prefix frontend",
     "dev": "node --watch server.js"
   },
@@ -17,6 +16,7 @@
     "@langchain/groq": "^0.2.2",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.58.4",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -25,6 +25,7 @@
     "express-rate-limit": "^7.5.0",
     "faker": "^6.6.6",
     "firebase-admin": "^13.4.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
     "mongoose": "^8.14.2",
@@ -33,8 +34,10 @@
     "nodemailer": "^7.0.3",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "puppeteer": "^24.10.0",
-    "selenium-webdriver": "^4.33.0",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "@types/node": "^24.3.1"
   }
 }
