--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@google/genai": "^1.17.0",
     "@langchain/core": "^0.3.57",
     "@langchain/groq": "^0.2.2",
     "axios": "^1.9.0",
@@ -34,6 +35,8 @@
     "nodemailer": "^7.0.3",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
