--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-collapsible": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -45,7 +46,7 @@
     "media-chrome": "^4.13.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
-    "motion": "^12.18.1",
+    "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-day-picker": "^9.0.0-rc.6",
