--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express-rate-limit": "^7.5.0",
     "faker": "^6.6.6",
     "firebase-admin": "^13.4.0",
+    "geoip-country": "^5.0.202509052342",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
@@ -37,6 +38,7 @@
     "pino-pretty": "^13.0.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "request-ip": "^3.3.0",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
