--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "cobe": "^0.6.3",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "firebase": "^11.8.1",
     "formik": "^2.4.6",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.15.17",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
