--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@google-cloud/local-auth": "^2.1.0",
+    "@google-cloud/pubsub": "^5.2.0",
     "@google/genai": "^1.17.0",
     "@langchain/core": "^0.3.57",
     "@langchain/groq": "^0.2.2",
@@ -27,6 +29,7 @@
     "faker": "^6.6.6",
     "firebase-admin": "^13.4.0",
     "geoip-country": "^5.0.202509052342",
+    "googleapis": "^105.0.0",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "langchain": "^0.3.27",
