--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,11 @@
-name: Deploy to EC2
+name: Deploy Backend to EC2
 
 on:
-  push:
-    branches: [main]
   workflow_dispatch:
 
 jobs:
   build:
-    name: Build Application
+    name: Build Backend
     runs-on: ubuntu-latest
 
     steps:
@@ -19,59 +17,52 @@ jobs:
         with:
           node-version: "20.13.1"
 
-      # BACKEND
+      # INSTALL BACKEND DEPENDENCIES
       - name: Install backend dependencies
         run: |
           cd backend
           npm ci
 
-      # FRONTEND
-      - name: Install frontend dependencies
+      # BUILD BACKEND (only if you use TypeScript, else remove)
+      - name: Build backend
         run: |
-          cd frontend
-          npm ci
+          cd backend
+          if [ -f tsconfig.json ]; then
+            npm run build
+          else
+            echo "No TypeScript build needed"
+          fi
 
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
-
-      # PACKAGE EVERYTHING FOR DEPLOYMENT
+      # PACKAGE BACKEND ONLY
       - name: Create deployment package
         run: |
-          mkdir -p deploy
+          mkdir -p deploy/backend
+          cp -r backend/* deploy/backend/
 
-          # Copy backend
-          cp -r backend deploy/backend
-
-          # Copy frontend build only
-          mkdir -p deploy/frontend
-          cp -r frontend/dist deploy/frontend/
-
-          # Extra: copy .env.example if exists
-          [ -f backend/.env.example ] && cp backend/.env.example deploy/backend/.env.example
+          # remove node_modules for fresh server install
+          rm -rf deploy/backend/node_modules
 
           tar -czf deploy.tar.gz -C deploy .
 
-      - name: Upload build artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: deployment-package
+          name: backend-package
           path: deploy.tar.gz
           retention-days: 1
 
   deploy:
-    name: Deploy to EC2
+    name: Deploy Backend to EC2
     needs: build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download build artifact
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: deployment-package
+          name: backend-package
 
-      - name: Deploy to EC2 via SSH
+      - name: Deploy via SSH
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
@@ -87,21 +78,21 @@ jobs:
 
             sudo chown -R $USER:$USER /Task-App/backend
 
+            # Backup old dist (optional)
             if [ -d "dist" ]; then
-              timestamp=$(date +%Y%m%d_%H%M%S)
               mkdir -p backups
-              tar -czf backups/backup_${timestamp}.tar.gz dist package.json .env 2>/dev/null || true
-              ls -t backups/backup_*.tar.gz 2>/dev/null | tail -n +6 | xargs -r rm
+              timestamp=$(date +%Y%m%d_%H%M%S)
+              tar -czf backups/backup_${timestamp}.tar.gz dist package.json .env || true
             fi
 
-            echo "Extracting package..."
+            echo "Extracting new backend..."
             tar --overwrite -xzf /tmp/deploy.tar.gz -C /Task-App
             rm /tmp/deploy.tar.gz
 
             sudo chown -R $USER:$USER /Task-App/backend
-
-            echo "Installing backend dependencies..."
             cd /Task-App/backend
+
+            echo "Installing dependencies..."
             npm ci
 
             if [ ! -f .env ]; then
@@ -109,15 +100,14 @@ jobs:
               echo "PORT=3000" >> .env
             fi
 
-            mkdir -p logs
-
+            # Restart backend using PM2
             if pm2 describe taskmate-backend > /dev/null 2>&1; then
-              sudo pm2 reload server.js --update-env
+              pm2 reload taskmate-backend
             else
-              sudo pm2 start server.js
+              pm2 start server.js --name taskmate-backend
             fi
 
-            sudo pm2 save
+            pm2 save
           EOF
 
           rm private_key.pem
@@ -126,47 +116,15 @@ jobs:
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
-          echo "Waiting for application..."
+          echo "Waiting for backend..."
           sleep 10
 
-          for i in {1..2}; do
-            echo "Attempt $i..."
-            response=$(curl -s -o /dev/null -w "%{http_code}" http://${EC2_HOST} || echo "000")
-            if [ "$response" = "200" ] || [ "$response" = "301" ] || [ "$response" = "302" ]; then
-              echo "Deployment successful: $response"
-              exit 0
-            fi
-            echo "Got: $response; retrying..."
-            sleep 5
-          done
+          response=$(curl -s -o /dev/null -w "%{http_code}" http://${EC2_HOST}:3000 || echo "000")
+          echo "Status: $response"
 
-          echo "Deployment failed"
-          exit 1
+          if [ "$response" != "200" ] && [ "$response" != "302" ] && [ "$response" != "301" ]; then
+            echo "Backend did not respond"
+            exit 1
+          fi
 
-      - name: Rollback on failure
-        if: failure()
-        env:
-          EC2_HOST: ${{ secrets.EC2_HOST }}
-          EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-        run: |
-          echo "$SSH_PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
-
-          ssh -i private_key.pem -o StrictHostKeyChecking=no ${EC2_USERNAME}@${EC2_HOST} << 'EOF'
-            cd /Task-App/backend
-            sudo chown -R $USER:$USER /Task-App/backend
-
-            latest_backup=$(ls -t backups/backup_*.tar.gz 2>/dev/null | head -1)
-
-            if [ -n "$latest_backup" ]; then
-              tar -xzf "$latest_backup" -C /Task-App/backend
-              npm ci
-              pm2 reload server.js
-              echo "Rollback complete"
-            else
-              echo "No backup found"
-            fi
-          EOF
-
-          rm private_key.pem
+          echo "Backend deployed successfully"
